# cartas-do-super-trunfo1

./: CMakeLists.txt  README.md  desafio-iniciante.c
