cmake_minimum_required(VERSION 4.0)
project(cartas_do_super_trunfo1)

set(CMAKE_CXX_STANDARD 14)

add_executable(cartas_do_super_trunfo1
        .idea/.gitignore
        .idea/c_cpp_properties.json
        .idea/cartas-do-super-trunfo1.iml
        .idea/editor.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        desafio-iniciante.c
        README.md)
